--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,94 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+body{
+  background: url("./assets/ground.jpg");
+
 }
 
+#top-heading{
+  text-align: center;
+  padding: 2rem;
+ 
+}
+
+
+
+form{
+  background: linear-gradient(to bottom right, #e4ebeb, #d8dedf);
+  
+  padding: 3rem 1rem;
+  border-radius: 1rem;
+  width: 400px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: start;
+  gap: 1rem;
+
+  .input-div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    input, select{
+      height: 2.5rem;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      border: none;
+      background-color: #f3f1fc;
+    }
+  }
+
+  button{
+    align-self: center;
+    width: 120px;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+  button:hover{
+    background-color: #33e957;
+    color: #fff;
+  }
+  button:active{
+    border: 5px solid green;
+  }
+}
+
+/* Leaderboard */
 .container{
-  border: 1px solid red;
-  margin: 2rem 0;
+  margin: 2rem auto;
+  padding: 1rem 0;
+  width: 95%;
+  border-radius: 0.5rem;
+  background-color: #0808084f;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  text-align: center;
 }
 
  .heading{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: aquamarine;
+  height: 3rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: rgb(69, 68, 68);
+
   p{
     width: 22%;
-    border: 1px solid black;
   }
 }
 
@@ -32,7 +104,22 @@
   justify-content: space-between;
   p, div{
     width: 22%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
+
+  .actions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.7rem;
+    font-weight: 600;
+    color: azure;
+
+    span{
+      cursor: pointer;
+      vertical-align: middle;
+    }
+  }
+
 }
 
