Added useEffect on the sorting of data, Fixed delete button position

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,12 @@ form{
       cursor: pointer;
       vertical-align: middle;
     }
+
+    #delete-span{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
 }
